feat: auth tokens tbh

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,7 @@ ENV=development
 
 TSDB_URL=postgres://testuser:testpassword@localhost/tsdb
 
-LEWIS_EMAIL_ADDRESS=
-LEWIS_EMAIL_PASSWORD=
+TELEGRAM_TOKEN=
+TELEGRAM_CHATID=
+
+AUTH_TOKENS=XYZ,ABC
